# MotorDriver

./: .gitignore  CMakeLists.txt  README.md
include/: QLedIndicator.h  expanderwidget.h
include/TabToolbar/: Builder.h
resources/: resource.qrc  tabtoolbar.json
resources/actionsIcons/Dummy/: Thumbs.db
resources/translate/: MotorDriver_en_GB.ts  MotorDriver_tr_TR.qm  MotorDriver_tr_TR.ts
simulator/: CommunucationSimulator.py
src/: main.cpp
src/commands/: CheckBoxCommand.cpp  CheckBoxCommand.h  ComboBoxCommand.cpp  ComboBoxCommand.h  CommandManager.cpp  CommandManager.h  ICommand.h  LineEditCommand.cpp  LineEditCommand.h  RadioButtonCommand.cpp  RadioButtonCommand.h  SliderCommand.cpp  SliderCommand.h  SpinBoxCommand.cpp  SpinBoxCommand.h
src/controllers/: ApplicationController.cpp  ApplicationController.h
src/controllers/BaseController/: AbstractController.cpp  AbstractController.h
src/controllers/DriveSetupAndMotion/: DriveSetupAndMotionController.cpp  DriveSetupAndMotionController.h
src/controllers/DriveSetupAndMotion/ExpertTuning/Current/: CurrentIdentificationController.cpp  CurrentIdentificationController.h
src/controllers/DriveSetupAndMotion/ExpertTuning/LimitsAndProtections/: CurrentLimitsController.cpp  CurrentLimitsController.h
src/controllers/DriveSetupAndMotion/QuickTuning/: QuickTuningController.cpp  QuickTuningController.h
src/controllers/DriveSetupAndMotion/QuickTuning/ApplicationSettings/: BrakeController.cpp  BrakeController.h
src/controllers/DriveSetupAndMotion/QuickTuning/AutomaticTuning/: AutomaticTuningController.cpp  AutomaticTuningController.h
src/controllers/DriveSetupAndMotion/QuickTuning/AxisConfiguration/: AxisConfigurationController.cpp  AxisConfigurationController.h
src/controllers/DriveSetupAndMotion/QuickTuning/MotorAndFeedBack/: FeedBackSettingsController.cpp  FeedBackSettingsController.h  MotorSettingsController.cpp  MotorSettingsController.h
src/controllers/Preferences/: PreferencesController.cpp  PreferencesController.h
src/controllers/StateMachine/: BusinessStateMachineContext.cpp  BusinessStateMachineContext.h  BusinessStateMachineController.cpp  BusinessStateMachineController.h
src/controllers/StateMachine/Communication/: StateCommunicationManager.h
src/controllers/StateMachine/ConnectionStates/: ConnectedControllerState.cpp  ConnectedControllerState.h  DisconnectControllerState.cpp  DisconnectControllerState.h
src/controllers/StateMachine/DriveSetupAndMotion/: DriveSetupAndMotionControllerState.cpp  DriveSetupAndMotionControllerState.h
src/controllers/StateMachine/SystemConfigurationStates/: SystemConfigurationControllerState.cpp  SystemConfigurationControllerState.h
src/controllers/TabToolMenuBar/: TabToolMenuBarController.cpp  TabToolMenuBarController.h
src/controllers/VerticalMenuBar/: VerticalMenuBarController.cpp  VerticalMenuBarController.h
src/core/ChartManager/: ChartController.cpp  ChartController.h
src/core/CommandDispatcher/: CommandDispatcher.cpp  CommandDispatcher.h  PeriodicQueryManager.cpp  PeriodicQueryManager.h  SequentialCommandProcessor.cpp  SequentialCommandProcessor.h
src/core/CommunicationManager/: CommunicationManager.cpp  CommunicationManager.h
src/core/CommunicationManager/Channels/: ICommunicationChannel.h  SerialPortChannel.cpp  SerialPortChannel.h
src/core/CommunicationManager/Model/: Command.cpp  Command.h  Response.cpp  Response.h
src/core/CommunicationManager/Protocol/: IProtocol.h  SimpleIQProtocol.cpp  SimpleIQProtocol.h
src/core/CommunicationManager/Utils/: CircularBuffer.cpp  CircularBuffer.h  MessageQueue.cpp  MessageQueue.h
src/core/ErrorHandling/: ErrorHandling.cpp  ErrorHandling.h  ErrorHandling.ui
src/core/LogManager/: LogManager.cpp  LogManager.h
src/core/MotorDriver/: GoldDriveMotor.cpp  GoldDriveMotor.h  IMotorDriver.h  MotorDriverFactory.h  MotorDriverManager.h  PlatiniumDriveMotor.cpp  PlatiniumDriveMotor.h
src/events/: EventAggregator.h
src/settings/: SettingsManager.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/CommonPanels/: PanelHeader.cpp  PanelHeader.h  PanelHeader.ui
src/ui/DriveSetupAndMotion/: DriveSetupAndMotion.cpp  DriveSetupAndMotion.h  DriveSetupAndMotion.ui
src/ui/DriveSetupAndMotion/ExpertTuning/AplicationSettings/: InputAndOutputs.cpp  InputAndOutputs.h  InputAndOutputs.ui  SettingWindow.cpp  SettingWindow.ui
src/ui/DriveSetupAndMotion/ExpertTuning/Commutation/: Comutation.cpp  Comutation.h  Comutation.ui
src/ui/DriveSetupAndMotion/MotionSingleAxis/: MotionSingleAxis.cpp  MotionSingleAxis.h  MotionSingleAxis.ui
src/ui/Preferences/: Preferences.cpp  Preferences.h  Preferences.ui
src/ui/Preferences/Settings/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
src/ui/StateMachine/: ConnectedState.cpp  ConnectedState.h  DisconnectState.cpp  DisconnectState.h  DriveSetupandMotionState.cpp  DriveSetupandMotionState.h  SplashScreenState.cpp  SplashScreenState.h  SystemConfigurationState.cpp  SystemConfigurationState.h  UIStateMachineContext.cpp  UIStateMachineContext.h  UIStateMachineController.cpp  UIStateMachineController.h
src/ui/StateMachine/DriveSetupandMotionStates/: ExpertTuningState.cpp  ExpertTuningState.h  MotionSingleAxisState.cpp  MotionSingleAxisState.h  QuickTuningState.cpp  QuickTuningState.h
src/ui/SystemConfiguration/: SystemConfiguration.cpp  SystemConfiguration.h  SystemConfiguration.ui
src/ui/TabToolMenuBar/: TabToolMenuBar.cpp  TabToolMenuBar.h  TabToolMenuBar.ui
src/ui/VerticalMenuBar/: VerticalMenuBar.cpp  VerticalMenuBar.h  VerticalMenuBar.ui
src/ui/VerticalMenuBar/MainMenuListWidget/: MainMenuListWidget.cpp  MainMenuListWidget.h  MainMenuListWidget.ui
src/ui/VerticalMenuBar/WindowsListWidget/: WindowsListWidget.cpp  WindowsListWidget.h  WindowsListWidget.ui
src/ui/VerticalMenuBar/WorkspaceWidget/: WorkspaceWidget.cpp  WorkspaceWidget.h  WorkspaceWidget.ui
src/utils/: Constants.h  GuardedSignalTransition.h  Utils.cpp  Utils.h
test/TestCommunicationWidget/: TestCommunicationWidget.cpp  TestCommunicationWidget.h
(+128 files in other folders)
